--- a/tasks/section3.yml
+++ b/tasks/section3.yml
@@ -382,7 +382,9 @@
       name: firewalld
       state: started
       enabled: yes
-  when: rhel7cis_firewall == "firewalld"
+  when:
+    - rhel7cis_firewall == "firewalld"
+    - rhel7cis_rule_3_6_1
   tags:
       - level1
       - patch
