--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -86,9 +86,11 @@ rhel7cis_rule_2_1_4: true
 rhel7cis_rule_2_1_5: true
 rhel7cis_rule_2_1_6: true
 rhel7cis_rule_2_1_7: true
-rhel7cis_rule_2_2_1_1: true
-rhel7cis_rule_2_2_1_2: true
-rhel7cis_rule_2_2_1_3: true
+# don't enforce time sync in a cis role..
+rhel7cis_rule_2_2_1_1: false
+rhel7cis_rule_2_2_1_2: false
+rhel7cis_rule_2_2_1_3: false
+# end of time sync madness
 rhel7cis_rule_2_2_2: true
 rhel7cis_rule_2_2_3: true
 rhel7cis_rule_2_2_4: true
